Bug 59825 - Many cilkplus test failures
Summary: Many cilkplus test failures
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: c (show other bugs)
Version: 4.9.0
: P3 normal
Target Milestone: 4.9.0
Assignee: Balaji V. Iyer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-15 12:10 UTC by H.J. Lu
Modified: 2014-01-24 21:02 UTC (History)
3 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2014-01-15 00:00:00


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2014-01-15 12:10:18 UTC
On Linux/x86, revision 206621 gave:

FAIL: c-c++-common/cilk-plus/AN/rank_mismatch2.c  -fcilkplus -g -O0 -std=c99 (internal compiler error)
FAIL: c-c++-common/cilk-plus/AN/rank_mismatch2.c  -fcilkplus -g -O0 -std=c99 (test for excess errors)
FAIL: c-c++-common/cilk-plus/AN/rank_mismatch2.c  -fcilkplus (internal compiler error)
FAIL: c-c++-common/cilk-plus/AN/rank_mismatch2.c  -fcilkplus -O2 -std=c99 (internal compiler error)
FAIL: c-c++-common/cilk-plus/AN/rank_mismatch2.c  -fcilkplus -O2 -std=c99 (test for excess errors)
FAIL: c-c++-common/cilk-plus/AN/rank_mismatch2.c  -fcilkplus -O3 -std=c99 (internal compiler error)
FAIL: c-c++-common/cilk-plus/AN/rank_mismatch2.c  -fcilkplus -O3 -std=c99 (test for excess errors)
FAIL: c-c++-common/cilk-plus/AN/rank_mismatch2.c  -fcilkplus -std=c99 (internal compiler error)
FAIL: c-c++-common/cilk-plus/AN/rank_mismatch2.c  -fcilkplus -std=c99 (test for excess errors)
FAIL: c-c++-common/cilk-plus/AN/rank_mismatch2.c  -fcilkplus (test for excess errors)
FAIL: c-c++-common/cilk-plus/AN/rank_mismatch2.c  -g -fcilkplus (internal compiler error)
FAIL: c-c++-common/cilk-plus/AN/rank_mismatch2.c  -g -fcilkplus (test for excess errors)
FAIL: c-c++-common/cilk-plus/AN/rank_mismatch2.c  -g -O2 -ftree-vectorize -fcilkplus (internal compiler error)
FAIL: c-c++-common/cilk-plus/AN/rank_mismatch2.c  -g -O2 -ftree-vectorize -fcilkplus (test for excess errors)
FAIL: c-c++-common/cilk-plus/AN/rank_mismatch2.c  -O1 -fcilkplus (internal compiler error)
FAIL: c-c++-common/cilk-plus/AN/rank_mismatch2.c  -O1 -fcilkplus (test for excess errors)
FAIL: c-c++-common/cilk-plus/AN/rank_mismatch2.c  -O2 -fcilkplus (internal compiler error)
FAIL: c-c++-common/cilk-plus/AN/rank_mismatch2.c  -O2 -fcilkplus (test for excess errors)
FAIL: c-c++-common/cilk-plus/AN/rank_mismatch2.c  -O3 -fcilkplus (internal compiler error)
FAIL: c-c++-common/cilk-plus/AN/rank_mismatch2.c  -O3 -fcilkplus (test for excess errors)

Revision 206615 is OK.
Comment 1 H.J. Lu 2014-01-15 13:32:55 UTC
It is caused by r206620.
Comment 2 Jakub Jelinek 2014-01-15 13:36:05 UTC
That is known, I've said that explicitly in the patch submission that AN is broken and will need to be fixed.
Comment 3 Jeffrey A. Law 2014-01-16 19:49:27 UTC
Given Cilk+ is new in 4.9 the test failures are not a regression.
Comment 4 Hans-Peter Nilsson 2014-01-17 21:18:23 UTC
(In reply to Jeffrey A. Law from comment #3)
> Given Cilk+ is new in 4.9 the test failures are not a regression.

Meh, I see you subscribe to the release-maintainer-definition; still they passed before, so it's a regression on trunk, even if not compared to a release.
(An autotester doesn't care whether the reason they passed is right or wrong, it just keeps shouting at me...)  Anyway, apparently all targets see this, pain dutily shared. Thanks to H.J. for the PR.
Comment 5 Jeffrey A. Law 2014-01-17 21:19:30 UTC
It's certainly my mindset right now..  But fully understand the complaints you're getting from the autotester :-)
Comment 6 bviyer 2014-01-23 17:01:25 UTC
Author: bviyer
Date: Thu Jan 23 17:00:53 2014
New Revision: 206991

URL: http://gcc.gnu.org/viewcvs?rev=206991&root=gcc&view=rev
Log:
Fix for PR c/59825.
2014-01-23  Balaji V. Iyer  <balaji.v.iyer@intel.com>

        PR c/59825
        * c-array-notation.c (expand_array_notation_exprs): Rewrote this
        function to use walk_tree and moved a lot of its functionality to
        expand_array_notations.
        (expand_array_notations): New function.



Modified:
    trunk/gcc/c/ChangeLog
    trunk/gcc/c/c-array-notation.c
Comment 7 Jeffrey A. Law 2014-01-24 21:02:59 UTC
Should be resolved by Balaji's trunk commit.