Fix for PR c/59825. 2014-01-23  Balaji V. Iyer  <balaji.v.iyer@intel.com>

PR c/59825
        * c-array-notation.c (expand_array_notation_exprs): Rewrote this
        function to use walk_tree and moved a lot of its functionality to
        expand_array_notations.
        (expand_array_notations): New function.




git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@206991 138bc75d-0d04-0410-961f-82ee72b054a4